@@ -13,6 +13,7 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Component
 public class UserLoginFailHandler extends SimpleUrlAuthenticationFailureHandler {
@@ -34,7 +35,7 @@ public class UserLoginFailHandler extends SimpleUrlAuthenticationFailureHandler 
             errorMessage = "알 수 없는 이유로 로그인에 실패하였습니다 관리자에게 문의하세요.";
         }
 
-        errorMessage = URLEncoder.encode(errorMessage, "UTF-8");
+        errorMessage = URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
         setDefaultFailureUrl("/usr/member/login?error=true&exception=" + errorMessage);
 
         super.onAuthenticationFailure(request, response, exception);
